// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckList \`extra\` props 1`] = `
<div>
  <div
    class="adm-list adm-list-default adm-check-list"
  >
    <div
      class="adm-list-body"
    >
      <div
        class="adm-list-body-inner"
      >
        <a
          class="adm-list-item adm-plain-anchor adm-check-list-item"
        >
          <div
            class="adm-list-item-content"
          >
            <div
              class="adm-list-item-content-main"
            >
              A
            </div>
            <div
              class="adm-list-item-content-extra"
            >
              <div
                class="adm-check-list-item-extra"
              >
                <svg
                  class="antd-mobile-icon"
                  height="1em"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 48 48"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    id="CheckCircleOutline-CheckCircleOutline"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g
                      id="CheckCircleOutline-编组"
                    >
                      <rect
                        fill="#FFFFFF"
                        height="48"
                        id="CheckCircleOutline-矩形"
                        opacity="0"
                        width="48"
                        x="0"
                        y="0"
                      />
                      <path
                        d="M24,2 C36.1502645,2 46,11.8497355 46,24 C46,36.1502645 36.1502645,46 24,46 C11.8497355,46 2,36.1502645 2,24 C2,11.8497355 11.8497355,2 24,2 Z M24,5 C13.5065898,5 5,13.5065898 5,24 C5,34.4934102 13.5065898,43 24,43 C34.4934102,43 43,34.4934102 43,24 C43,13.5065898 34.4934102,5 24,5 Z M35.9397591,17.682013 L23.3431458,30.2781746 L23.3431458,30.2781746 C22.7573593,30.863961 21.8076118,30.863961 21.2218254,30.2781746 L21.1448618,30.1962736 C21.0355278,30.1325525 20.932526,30.0538463 20.8388348,29.9601551 L13.5613926,22.681994 C13.4051906,22.5257765 13.4052031,22.2725106 13.5614206,22.1163086 C13.636434,22.0413025 13.7381696,21.9991652 13.8442493,21.9991652 L16.9549543,21.9991652 C17.0610359,21.9991652 17.1627731,22.041304 17.2377869,22.1163124 L22.25,27.1281652 L22.25,27.1281652 L32.2624756,17.1163137 C32.3374894,17.0413045 32.4392272,16.9991652 32.5453095,16.9991652 L35.6569214,16.9991652 C35.8778353,16.9991652 36.0569214,17.1782513 36.0569214,17.3991652 C36.0569214,17.5052543 36.0147767,17.6069981 35.9397591,17.682013 Z"
                        fill="currentColor"
                        id="CheckCircleOutline-形状"
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </a>
        <a
          class="adm-list-item adm-plain-anchor adm-check-list-item"
        >
          <div
            class="adm-list-item-content"
          >
            <div
              class="adm-list-item-content-main"
            >
              B
            </div>
            <div
              class="adm-list-item-content-extra"
            >
              <div
                class="adm-check-list-item-extra"
              >
                <svg
                  class="antd-mobile-icon"
                  height="1em"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 48 48"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    id="CheckCircleOutline-CheckCircleOutline"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g
                      id="CheckCircleOutline-编组"
                    >
                      <rect
                        fill="#FFFFFF"
                        height="48"
                        id="CheckCircleOutline-矩形"
                        opacity="0"
                        width="48"
                        x="0"
                        y="0"
                      />
                      <path
                        d="M24,2 C36.1502645,2 46,11.8497355 46,24 C46,36.1502645 36.1502645,46 24,46 C11.8497355,46 2,36.1502645 2,24 C2,11.8497355 11.8497355,2 24,2 Z M24,5 C13.5065898,5 5,13.5065898 5,24 C5,34.4934102 13.5065898,43 24,43 C34.4934102,43 43,34.4934102 43,24 C43,13.5065898 34.4934102,5 24,5 Z M35.9397591,17.682013 L23.3431458,30.2781746 L23.3431458,30.2781746 C22.7573593,30.863961 21.8076118,30.863961 21.2218254,30.2781746 L21.1448618,30.1962736 C21.0355278,30.1325525 20.932526,30.0538463 20.8388348,29.9601551 L13.5613926,22.681994 C13.4051906,22.5257765 13.4052031,22.2725106 13.5614206,22.1163086 C13.636434,22.0413025 13.7381696,21.9991652 13.8442493,21.9991652 L16.9549543,21.9991652 C17.0610359,21.9991652 17.1627731,22.041304 17.2377869,22.1163124 L22.25,27.1281652 L22.25,27.1281652 L32.2624756,17.1163137 C32.3374894,17.0413045 32.4392272,16.9991652 32.5453095,16.9991652 L35.6569214,16.9991652 C35.8778353,16.9991652 36.0569214,17.1782513 36.0569214,17.3991652 C36.0569214,17.5052543 36.0147767,17.6069981 35.9397591,17.682013 Z"
                        fill="currentColor"
                        id="CheckCircleOutline-形状"
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckList renders with disabled 1`] = `
<div>
  <div
    class="adm-list adm-list-default adm-check-list"
  >
    <div
      class="adm-list-body"
    >
      <div
        class="adm-list-body-inner"
      >
        <a
          class="adm-list-item adm-plain-anchor adm-check-list-item"
        >
          <div
            class="adm-list-item-content"
          >
            <div
              class="adm-list-item-content-main"
            >
              A
            </div>
            <div
              class="adm-list-item-content-extra"
            >
              <div
                class="adm-check-list-item-extra"
              />
            </div>
          </div>
        </a>
        <a
          class="adm-list-item adm-plain-anchor adm-check-list-item"
        >
          <div
            class="adm-list-item-content"
          >
            <div
              class="adm-list-item-content-main"
            >
              B
            </div>
            <div
              class="adm-list-item-content-extra"
            >
              <div
                class="adm-check-list-item-extra"
              />
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckList renders with readonly 1`] = `
<div>
  <div
    class="adm-list adm-list-default adm-check-list"
  >
    <div
      class="adm-list-body"
    >
      <div
        class="adm-list-body-inner"
      >
        <a
          class="adm-list-item adm-plain-anchor adm-check-list-item"
        >
          <div
            class="adm-list-item-content"
          >
            <div
              class="adm-list-item-content-main"
            >
              A
            </div>
            <div
              class="adm-list-item-content-extra"
            >
              <div
                class="adm-check-list-item-extra"
              />
            </div>
          </div>
        </a>
        <a
          class="adm-list-item adm-plain-anchor adm-check-list-item adm-check-list-item-active"
        >
          <div
            class="adm-list-item-content"
          >
            <div
              class="adm-list-item-content-main"
            >
              B
            </div>
            <div
              class="adm-list-item-content-extra"
            >
              <div
                class="adm-check-list-item-extra"
              >
                <svg
                  class="antd-mobile-icon"
                  height="1em"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 48 48"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    id="CheckOutline-CheckOutline"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g
                      id="CheckOutline-编组"
                    >
                      <rect
                        fill="#FFFFFF"
                        height="48"
                        id="CheckOutline-矩形"
                        opacity="0"
                        width="48"
                        x="0"
                        y="0"
                      />
                      <path
                        d="M44.309608,12.6841286 L21.2180499,35.5661955 L21.2180499,35.5661955 C20.6343343,36.1446015 19.6879443,36.1446015 19.1042286,35.5661955 C19.0538201,35.5162456 19.0077648,35.4636155 18.9660627,35.4087682 C18.9113105,35.368106 18.8584669,35.3226694 18.808302,35.2729607 L3.6903839,20.2920499 C3.53346476,20.1365529 3.53231192,19.8832895 3.68780898,19.7263704 C3.7629255,19.6505669 3.86521855,19.6079227 3.97193622,19.6079227 L7.06238923,19.6079227 C7.16784214,19.6079227 7.26902895,19.6495648 7.34393561,19.7237896 L20.160443,32.4236157 L20.160443,32.4236157 L40.656066,12.115858 C40.7309719,12.0416387 40.8321549,12 40.9376034,12 L44.0280571,12 C44.248971,12 44.4280571,12.1790861 44.4280571,12.4 C44.4280571,12.5067183 44.3854124,12.609012 44.309608,12.6841286 Z"
                        fill="currentColor"
                        fill-rule="nonzero"
                        id="CheckOutline-路径"
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
